# xml2cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gateserver.xml.example  xml2cpp.md
src/: main.cpp  test.cpp
test/: CMakeLists.txt
test/config/: test.xml.example
test/src/: main.cpp
